Bug fix for form input on safari

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -47,5 +47,5 @@ input[type="email"]:not(:placeholder-shown) ~ .input-text {
 
 textarea[type="text"]:focus ~ .input-text,
 textarea[type="text"]:not(:placeholder-shown) ~ .input-text {
-  @apply transform bg-white dark:bg-darkmode -translate-y-6 -translate-x-2 scale-75;
+  @apply transform bg-white py-0 dark:bg-darkmode -translate-y-3 -translate-x-2 scale-75;
 }
